--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "scripts": {
-    "build": "node scripts/build.js build",
-    "serve": "node scripts/build.js serve",
-    "dev": "node scripts/build.js serve 3000"
+    "build": "node script.js build"
   }
 }
